@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[81] --> Fix Sindragosa (Final version!).
 [80] --> Update CCDelay by Diton.
 [79] --> Core/Resistances:
           - Remove Holy Resistance from Players
